fix: horizontal scroll issue on applicants list

--- a/src/components/molecules/applicant-list/applicant-list.module.scss
+++ b/src/components/molecules/applicant-list/applicant-list.module.scss
@@ -1,4 +1,5 @@
 .applicantContainer {
+  max-width: 100vw;
   padding: 1rem 1rem 1.5rem 1rem;
   display: flex;
   flex-direction: column;
